--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
         <main>
             <h1>Text analzyer</h1>
             <p>Paste in text below, submit, and get some basic stats back.</p>
-            <form>
+            <form class="form">
                 <div>
                     <label for="user-text">Text to analyze</label>
-                    <textarea cols="60" rows="20" id="user-text" name="user-text" placeholder="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." required></textarea>
+                    <textarea cols="60" rows="20" id="user-text" name="user-text" placeholder="Enter your text here..." required></textarea>
                 </div>
                 <div>
                     <button type="submit">Analyze it!</button>
                 </div>
             </form>
 
-            <dl class="hidden text-report">
+            <dl class="hidden report">
                 <dt>Word count</dt>
-                <dd></dd>
+                <dd class="words"></dd>
 
                 <dt>Unique word count</dt>
-                <dd></dd>
+                <dd class="unique"></dd>
 
                 <dt>Average word length</dt>
-                <dd></dd>
+                <dd class="length"></dd>
             </dl>
         </main>
     </div>
 
-    <!-- link to jquery -->
-    <!-- link to your app.js -->
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
